# rust-circular-buffer

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
benches/: benchmark.rs
src/: backend.rs  cmp.rs  debug.rs  drain.rs  embedded_io.rs  fixed.rs  hash.rs  heap.rs  io.rs  iter.rs  lib.rs  tests.rs
tests/: boxed.rs  covariance.rs  fixed.rs  heap.rs  io.rs  large.rs  randomized.rs
tests/common/: mod.rs  randomized.rs
