[package]
name = "circular-buffer"
version = "1.2.0"
authors = ["Andrea Corbellini <corbellini.andrea@gmail.com>"]
edition = "2024"
rust-version = "1.87"
license = "BSD-3-Clause"

description = "Efficient, fixed-size, overwriting circular buffer"
repository = "https://github.com/andreacorbellini/rust-circular-buffer"

keywords = ["circular-buffer", "buffer", "queue", "fifo", "small"]
categories = ["data-structures", "no-std"]

[features]
default = ["std"]

alloc = []
std = ["alloc"]

[dependencies]
embedded-io = { version = "0.7.1", default-features = false, optional = true }
embedded-io-async = { version = "0.7.0", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.8.2" }
drop-tracker = { version = "0.2.0" }
futures-lite = { version = "2.6" }
rand = { version = "0.10.1" }

[[bench]]
name = "benchmark"
harness = false
